--- a/ex-6/cart/cart.css
+++ b/ex-6/cart/cart.css
@@ -1,24 +1,99 @@
-.cart-product {
-    border: 1px solid #ccc;
+* {
+    font-family: "Roboto", serif;
+  }
+  
+  body {
+    background-color: #dbdbdb;
+  }
+  
+  #cart-products {
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .cart-product {
+    background-color: white;
     border-radius: 8px;
     padding: 16px;
-    margin: 16px;
-    max-width: 400px;
-    text-align: center;
-}
-.cart-product img {
-    max-width: 100%;
+    margin: 16px 0;
+    display: flex;
+    align-items: center;
+  }
+  
+  .cart-product img {
     height: auto;
     border-radius: 8px;
-}
-.cart-product h2 {
-    font-size: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-right: 25px;
+    max-width: 200px; /* Limita o tamanho da imagem */
+    width: 100%;
+  }
+  
+  .cart-product h2 {
+    font-size: 30px;
     margin: 10px 0;
-}
-.cart-product p {
+  }
+  
+  .cart-product p {
     font-size: 16px;
     color: #555;
-}
-.cart-product span {
+  }
+  
+  .cart-product span {
     font-weight: bold;
+    color: green;
+    font-size: 20px;
+  }
+  
+  .cart-product button {
+    background-color: red;
+    border: none;
+    color: white;
+    margin-left: 15px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-weight: 600;
+    cursor: pointer;
+  }
+  
+  .finish {
+    width: 100%;
+    border: none;
+    background-color: green;
+    color: white;
+    font-weight: 600;
+    padding: 10px;
+    font-size: 18px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+
+  main{
+    min-height: calc(100vh - 468px);
 }
+
+  
+  @media (max-width: 480px) {
+    .cart-product {
+      flex-direction: column;
+      text-align: center;
+    }
+  
+    .cart-product img {
+      margin: 0;
+      max-width: 100%;
+    }
+  
+    .cart-product h2 {
+      font-size: 24px;
+    }
+  
+    .cart-product span {
+      font-size: 18px;
+    }
+  
+    .cart-product button {
+      margin-top: 10px;
+    }
+  }
