--- a/ex-6/style.css
+++ b/ex-6/style.css
@@ -1,31 +1,95 @@
-.card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 16px;
-    margin: 16px;
-    width: 250px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+* {
+    font-family: "Roboto", serif;
+  }
+
+body{
+    background-color: #dbdbdb;
 }
+
+#products {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 16px;
+    padding: 16px;
+    justify-items: center;
+}
+
+.card {
+    border-radius: 8px;
+    padding: 18px;
+    background-color: white;
+    max-width: 250px;
+}
+
 .card img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 .card h2 {
-    font-size: 18px;
-    margin: 8px 0;
+    font-size: 19px;
+    margin: 0;
+    margin-bottom: 5px;
+    margin-top: 15px;
 }
-.card p {
-    font-size: 14px;
-    color: #555;
+
+.card p{
+    margin: 0;
+    font-weight: 700;
+    color: green;
+    margin-bottom: 15px;
 }
+
 .card span {
     font-weight: bold;
     color: #000;
 }
-#products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+
+.card button{
+    border: none;
+    background-color: black;
+    border-radius: 5px;
+    padding: 7px 10px;
+    width: 100%;
+}
+
+.card a{
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+}
+
+#search{
+    border: none;
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
+    padding: 0 10px;
+    border-radius: 5px;
+    padding: 0 25px;
+    box-sizing: border-box;
+}
+
+main{
+    min-height: calc(100vh - 468px);
+}
+
+@media (max-width: 1024px) {
+    #products {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    #products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 480px) {
+    #products {
+        grid-template-columns: 1fr;
+    }
 }
