--- a/ex-6/utils/navbar.css
+++ b/ex-6/utils/navbar.css
@@ -1,6 +1,7 @@
 nav{
     background-color: black;
-    padding: 15px 0;
+    padding: 30px 0;
+    margin-bottom: 10px;
 }
 
 .nav-div{
@@ -11,10 +12,108 @@ nav{
 .nav-div a{
     color: white;
     text-decoration: none;
+    font-size: 25px;
+}
+
+.nav-div div a{
+    font-size: 20px;
+    transition: .2s;
+}
+
+.nav-div div a:hover{
+    color: blueviolet;
+    transition: .2s;
 }
 
 .container{
     max-width: 1024px;
     width: 100%;
     margin: 0 auto;
+}
+
+
+footer {
+    background-color: black;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 15px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-section {
+    flex: 1;
+    margin: 20px;
+}
+
+.footer-section h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.footer-section p {
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 8px;
+}
+
+.footer-section ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    transition: color 0.3s;
+}
+
+.footer-section ul li a:hover {
+    color: blueviolet;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+}
+
+.social-links li {
+    margin: 0 10px;
+}
+
+.footer-bottom {
+    background-color: #272727;
+    padding: 10px;
+}
+
+.footer-bottom p {
+    font-size: 12px;
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .footer-section {
+        margin-bottom: 20px;
+    }
+
+    .social-links {
+        flex-direction: column;
+    }
 }
